# claude-code-aws-gateway

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.load  Dockerfile.release  LICENSE  Makefile  README.md  SECURITY.md  _config.yml  build.rs  deny.toml  docker-compose.load.yml  docker-compose.test.yml  docker-compose.yml  environments.json.example  llms.txt  model_seed.json  robots.txt
.claude/: CLAUDE.md
.claude/scripts/: deploy.sh
.clusterfuzzlite/: Dockerfile  build.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  fuzz.yml  pages.yml  release.yml  sast.yml  scorecard.yml
.sqlx/: query-1e3008c7da2f612369dce943e143554b0abaa2ef10584590768a1f1482886b11.json  query-2b0e501278b533fc56f340ac5e017706bfc19952d6805240a7aeb88d6b67340e.json  query-3dcaa8fca5f8c0505074933aa0d31d2257be8bd19cdb776440d3d4610d0f7a4c.json  query-3e6e90d4f35a87430b11ef1693096836e5add61ad33f7a9b241b967ae063f42d.json  query-480722c6581f20df8045371a2f5a9f406adf9f8c5e0669ca09605ea5ace171aa.json  query-9ffa5aadb22aeffb663c7499a1d6b7396531d2b0893169920d5fe54a590b548f.json  query-afedbb01b57513f5939fb651ddb1e19e970b2ac1415ea8bdfa19814feee88bf8.json  query-c11723760e05ef04a688b73addda80d7be73a6d2a142ba9e774ae1042fad9ab5.json  query-c9ce8e2a383243a260f9a2e4364a9d40ddef0e8e8f739d6eb91e6df4d2cc1797.json  query-e72339284892e02d6a34c1b0745c2cb25c2761d2e05537a16249cb30cacacab8.json  query-e81cf4dd1aac7ca24fa41ab90f6da4ab5aba349374e2551fed85a58ff0de00dd.json  query-f6bbab4201b5637008ee8d9e0b4a5820e9675db7e5db83b2289bfde72f483423.json
_includes/: head-custom.html
cli/: Cargo.toml
cli/src/: config.rs  main.rs
cli/src/commands/: aip_overrides.rs  betas.rs  config.rs  endpoints.rs  keys.rs  mappings.rs  mod.rs  scim.rs  teams.rs  update.rs
docs/: README.md  authentication.md  budgets.md  cli-analysis.md  cli-reference.md  comparison.md  configuration.md  endpoints.md  faq.md  getting-started.md  metrics.md  office-integration.md  scim-spec.md  upgrading.md  web-search.md
docs/guides/: bedrock-extended-thinking.md  budget-controls.md  eliminate-429-errors.md  enterprise-deployment.md  web-search-bedrock.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: filter_betas.rs  model_mapping.rs  sanitize_cache_control.rs  scim_filter.rs
infra/: README.md  app.ts  cdk.json  package.json  stack.ts  tsconfig.json
migrations/: 001_init.sql  002_endpoint_credentials.sql  003_routing_rules.sql  004_notification_config.sql  005_sticky_user_default.sql  006_idp_user_claim.sql  007_idp_scopes.sql  008_scim.sql  009_scim_groups.sql  010_login_attempts.sql  010_model_pricing.sql  011_beta_overrides.sql  011_engagement_tag.sql  011_user_endpoint_affinity.sql  012_endpoint_aip_overrides.sql  013_model_mappings_audit.sql
scripts/: check-docs.sh  dev.sh  github-traffic-collector.sh
src/: lib.rs  main.rs
src/api/: accept.rs  admin.rs  cli_auth.rs  handlers.rs  mock_bedrock.rs  mod.rs  oidc_resolution.rs  proxy_login.ps1  proxy_login.sh
src/auth/: mod.rs  oidc.rs  session.rs
src/budget/: mod.rs  notifications.rs
src/cli/: main.rs  util.rs
src/config/: mod.rs
src/db/: affinity.rs  beta_overrides.rs  budget.rs  endpoint_aip_overrides.rs  endpoints.rs  idp.rs  keys.rs  login_attempts.rs  mod.rs  model_mappings.rs  model_pricing.rs  notification_config.rs  org_analytics.rs  schema.rs  scim_groups.rs  scim_tokens.rs  search_providers.rs  sessions.rs  settings.rs  setup_tokens.rs  spend.rs  teams.rs  users.rs
src/detection/: corrections.rs  dangerous.rs  discovery.rs  mod.rs  secrets.rs
src/endpoint/: mod.rs  stats.rs
src/migrations/: aip_legacy.rs  mod.rs
src/pricing/: mod.rs
src/proxy/: mod.rs
src/quota/: mod.rs
src/ratelimit/: mod.rs
src/scim/: auth.rs  discovery.rs  filter.rs  groups.rs  mod.rs  types.rs  users.rs
src/spend/: mod.rs  sanitize.rs
src/telemetry/: mod.rs
src/translate/: betas.rs  canonicalize.rs  mod.rs  model_seed.rs  models.rs  request.rs  response.rs  streaming.rs
src/websearch/: mod.rs  providers.rs
static/: index.html
tests/: integration_tests.rs
tests/e2e/: test_cc_compat.sh  test_load.sh  test_scim.sh  test_scim_oidc.sh
tests/frontend/: CLAUDE.md  package.json  (+2 more)
(+56 files in other folders)
