[package]
name = "ccag-cli"
version = "1.3.3"
edition = "2024"
description = "CLI management tool for Claude Code AWS Gateway — manage keys, users, teams, and budgets"
repository = "https://github.com/antkawam/claude-code-aws-gateway"
license = "MIT"
readme = "../README.md"
keywords = ["claude-code", "amazon-bedrock", "api-gateway", "cli", "anthropic"]
categories = ["command-line-utilities"]

[[bin]]
name = "ccag"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
dialoguer = "0.12"
dirs = "6.0.0"
indicatif = "0.18"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
self_update = { version = "0.42", default-features = false, features = ["rustls"] }
uuid = { version = "1", features = ["v4"] }
