[package]
name = "ccag-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
ccag = { path = ".." }
serde_json = "1"

[workspace]
members = ["."]

[[bin]]
name = "fuzz_scim_filter"
path = "fuzz_targets/scim_filter.rs"
doc = false

[[bin]]
name = "fuzz_model_mapping"
path = "fuzz_targets/model_mapping.rs"
doc = false

[[bin]]
name = "fuzz_filter_betas"
path = "fuzz_targets/filter_betas.rs"
doc = false

[[bin]]
name = "fuzz_sanitize_cache_control"
path = "fuzz_targets/sanitize_cache_control.rs"
doc = false
